[project]
name = "reinforcement-learning"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.21",
    "flax>=0.9.0",
    "gymnax>=0.0.9",
    "jax>=0.9.0.1",
    "matplotlib>=3.10.8",
    "optax>=0.2.7",
    "tqdm>=4.67.3",
]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.9.0",
]
