[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reinforcement-learning"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.21",
    "flax>=0.9.0",
    "gymnasium[mujoco]>=1.2.3",
    "gymnax>=0.0.9",
    "jax>=0.9.0.1",
    "matplotlib>=3.10.8",
    "optax>=0.2.7",
    "tqdm>=4.67.3",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
    "ruff>=0.9.0",
]
